lab4/dateapi-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dateapi-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dateapi
      version: v1
  template:
    metadata:
      labels:
        app: dateapi
        version: v1
    spec:
      containers:
      - name: helloworld
        image: getmub/dateapi:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 8080
