lab4/dateapi-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: dateapi
  labels:
    app: dateapi
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    name: http
  selector:
    app: dateapi
