lab4/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
   name: myingress
spec:
   rules:
   - http:
       paths:
       - path: /date
         backend:
           serviceName: dateapi
           servicePort: 8080
